fix navbar header on mobile

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2584,7 +2584,7 @@ b,
         margin-top: 0px;
     }
     .navbar-brand {
-        width: 82% !important;
+        width: 10% !important;
     }
 
     .info-tile-description {
